Add form contact us, stylish section

--- a/HTML&CSS/Layout1/index.html
+++ b/HTML&CSS/Layout1/index.html
@@ -36,33 +36,102 @@
                     euismod bibendum laoreet. Proin gravida dolor sit amet lacus<br />
                     accumsan et viverra justo commodo.
                 </span>
-                <button class="btn-download">
+                <button class="btn btn-download">
                     Download
                 </button>
             </div>
             <div class="introduction-form-col">
-                <form>
-                    2
+                <form class="form-trial" action="#">
+                    <div class="form-trial-header">
+                        <span class="trial-header-title"> Try Your <span class="trial-header-key-word">FREE</span> Trial Today</span>
+
+                    </div>
+                    <div class="form-trial-body">
+                        <div class="form-trial-input">
+                            <input name="Name" placeholder="Name" type="text" required />
+                        </div>
+                        <div class="form-trial-input">
+                            <input name="Email" placeholder="Email" type="email" required />
+                        </div>
+                        <div class="form-trial-input">
+                            <input name="Password" placeholder="Password" type="password" required />
+                        </div>
+
+                    </div>
+                    <div class="form-trial-btn-container">
+                        <button class="btn-get-started" type="submit">
+                            Get Started
+                        </button>
+                    </div>
+
+
                 </form>
             </div>
+        </section>
+
+        <section class="section-social">
+            <div class="section-social-text-block">
+                <span class="social-title">Social Media</span>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />Aenean euismod bibendum laoreet.
+            </div>
+            <ul class="section-social-list">
+                <li class="section-social-item"><a href="#"><img src="assets/images/content/social-icons/facebook.svg" alt="Facebook"/></a> </li>
+                <li class="section-social-item"><a href="#"><img src="assets/images/content/social-icons/gmail.svg" alt="Gmail" /></a></li>
+                <li class="section-social-item"><a href="#"><img src="assets/images/content/social-icons/twitter.svg" alt="Twitter" /></a></li>
+                <li class="section-social-item"><a href="#"><img src="assets/images/content/social-icons/instagram.svg" alt="Instagram" /></a></li>
+                <li class="section-social-item"><a href="#"><img src="assets/images/content/social-icons/linkedin.svg" alt="Linkedin" /></a></li>
+                <li class="section-social-item"><a href="#"><img src="assets/images/content/social-icons/pinterest.svg" alt="Pinterest" /></a></li>
+            </ul>
         </section>
 
         <section>1</section>
         <section>2</section>
         <section>3</section>
         <section>4</section>
-        <section>5</section>
-        <section>6</section>
-        <section>7</section>
+
+        <section class="section-stylish flex-centre">
+            <div class="section-stylish-container flex-centre">
+                <span class="title stylish-title">STYLISH AXURE DESIGN</span>
+                <p>Use the sections you need, remove the ones you don't.  Create g</p>
+                <button class="btn btn-download">Download</button>
+            </div>
+        </section>
+
+        <section class="section-contact-us">
+            <div class="section-contact-us-header">
+                <p class="title contact-us-title">contact us</p>
+                <p class="contact-us-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="contact-us-form">
+                <form>
+                    <div class="contact-us-input-container">
+                        <div class="input-container-left">
+                            <input type="text" name="Name" placeholder="Name" />
+                            <input type="email" name="Email" placeholder="Email" />
+                            <input type="text" name="Subject" placeholder="Subject" />
+                        </div>
+                        <div class="input-container-right">
+                            <textarea type="text" name="Message" placeholder="Message"></textarea>
+                        </div>
+                    </div>
+
+                    <button class="btn btn-contact-us" type="submit">
+                        Send Message
+                    </button>
+                </form>
+
+            </div>
+
+        </section>
 
         <footer>
             <ul class="footer-social-container">
-                <li class="footer-social-item"><a href="#"><img src="assets/images/footer/facebook.svg" alt="Facebook"/></a></li>
-                <li class="footer-social-item"><a href="#"><img src="assets/images/footer/gmail.svg" alt="Gmail" /></a></li>
-                <li class="footer-social-item"><a href="#"><img src="assets/images/footer/twitter.svg" alt="Twitter" /></a></li>
-                <li class="footer-social-item"><a href="#"><img src="assets/images/footer/instagram.svg" alt="Instagram" /></a></li>
-                <li class="footer-social-item"><a href="#"><img src="assets/images/footer/linkedin.svg" alt="Linkedin" /></a></li>
-                <li class="footer-social-item"><a href="#"><img src="assets/images/footer/pinterest.svg" alt="Pinterest" /></a></li>
+                <li class="footer-social-item"><a href="#"><img src="./assets/images/footer/facebook.svg" alt="Facebook"/></a></li>
+                <li class="footer-social-item"><a href="#"><img src="./assets/images/footer/gmail.svg" alt="Gmail" /></a></li>
+                <li class="footer-social-item"><a href="#"><img src="./assets/images/footer/twitter.svg" alt="Twitter" /></a></li>
+                <li class="footer-social-item"><a href="#"><img src="./assets/images/footer/instagram.svg" alt="Instagram" /></a></li>
+                <li class="footer-social-item"><a href="#"><img src="./assets/images/footer/linkedin.svg" alt="Linkedin" /></a></li>
+                <li class="footer-social-item"><a href="#"><img src="./assets/images/footer/pinterest.svg" alt="Pinterest" /></a></li>
             </ul>
             <p>
                 © 2020 Axure Themes
