refactor section contact us

--- a/HTML&CSS/Layout1/index.html
+++ b/HTML&CSS/Layout1/index.html
@@ -71,7 +71,7 @@
 
         <section class="section-social">
             <div class="section-social-text-block">
-                <span class="social-title">Social Media</span>
+                <span class="subtitle social-title">Social Media</span>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />Aenean euismod bibendum laoreet.
             </div>
             <ul class="section-social-list">
@@ -97,13 +97,13 @@
             </div>
         </section>
 
-        <section class="section-contact-us">
-            <div class="section-contact-us-header">
-                <p class="title contact-us-title">contact us</p>
+        <section class="section-contact-us flex-centre">
+            <div class="section-contact-us-container">
+            <div class="section-contact-us-header flex-centre">
+                <span class="title contact-us-title">contact us</span>
                 <p class="contact-us-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="contact-us-form">
-                <form>
+                <form action="#" method="post" class="contact-us-form flex-centre">
                     <div class="contact-us-input-container">
                         <div class="input-container-left">
                             <input type="text" name="Name" placeholder="Name" />
@@ -119,9 +119,7 @@
                         Send Message
                     </button>
                 </form>
-
             </div>
-
         </section>
 
         <footer>
