--- a/HTML&CSS/Layout1/index.html
+++ b/HTML&CSS/Layout1/index.html
@@ -117,22 +117,135 @@
                 </li>
             </ul>
         </section>
-        <section class="section-stylish ">
+
+        <section class="section-tabs">
+<!--            <header class="tabs-header">-->
+<!--                <h2></h2>-->
+
+<!--            </header>-->
+        </section>
+
+        <section class="section-awesome-points">
+            <header class="awesome-header">
+                <h2 class="title">WHY THIS IS AWESOME</h2>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </header>
+            <div class="awesome-points-container">
+                <div class="awesome-point-item">
+                    <img src="./assets/images/content/point_one.svg" alt="Point one" />
+                    <h3>Thoughtful Design</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+                        Proin gravida dolor sit amet lacus accumsan et viverra.</p>
+                </div>
+                <div class="awesome-point-item">
+                    <img src="./assets/images/content/point_two.svg" alt="Point two" />
+                    <h3>Well Crafted</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+                        Proin gravida dolor sit amet lacus accumsan et viverra.</p>
+                </div>
+                <div class="awesome-point-item">
+                    <img src="./assets/images/content/point_three.svg" alt="Point three" />
+                    <h3>Easy to Customize</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+                        Proin gravida dolor sit amet lacus accumsan et viverra..</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-pricing">
+            <header class="pricing-header">
+                <h2 class="title">PRICING OPTIONS</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </header>
+            <div class="pricing-container">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+
+            </div>
+        </section>
+
+        <section class="section-feedbacks">
+            <header class="feedbacks-header">
+                <h2 class="title">WHAT OUR CUSTOMERS ARE SAYING</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </header>
+            <div class="feedbacks-container">
+                <div class="feedback-item">
+                    <div class="feedback-block">
+                        <p class="feedback-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus
+                            expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
+                        </p>
+
+                    </div>
+                    <div class="feedback-user">
+                        <img class="user-avatar" src="./assets/images/content/avatar.svg" alt="Users avatar" />
+                        <div class="user-data">
+                            <h4>Jeremy H.</h4>
+                            <p>Manager</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="feedback-item">
+                    <div class="feedback-block">
+                        <p class="feedback-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus
+                            expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
+                        </p>
+
+                    </div>
+                    <div class="feedback-user">
+                        <img class="user-avatar" src="./assets/images/content/avatar.svg" alt="Users avatar" />
+                        <div class="user-data">
+                            <h4>Jeremy H.</h4>
+                            <p>Manager</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="feedback-item">
+                    <div class="feedback-block">
+                        <p class="feedback-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus
+                            expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
+                        </p>
+
+                    </div>
+                    <div class="feedback-user">
+                        <img class="user-avatar" src="./assets/images/content/avatar.svg" alt="Users avatar" />
+                        <div class="user-data">
+                            <h4>Jeremy H.</h4>
+                            <p>Manager</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+        <section class="section-stylish">
+            <header class="stylish-header">
                 <h2 class="title stylish-title">STYLISH AXURE DESIGN</h2>
                 <p>Use the sections you need, remove the ones you don't.  Create g</p>
+            </header>
+            <div class="stylish-container">
                 <button class="btn btn-download">Download</button>
+            </div>
         </section>
 
         <section class="section-contact-us ">
             <header class="contact-us-header">
-                <h2 class="title contact-us-title">contact us</h2>
-                <p class="contact-us-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h2 class="title">contact us</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </header>
             <form action="#" method="post" class="contact-us-form">
                     <div class="contact-us-input-container">
                         <div class="input-container">
-                            <input type="text" name="Name" placeholder="Name" />
-                            <input type="email" name="Email" placeholder="Email" />
+                            <input type="text" name="Name" placeholder="Name" required />
+                            <input type="email" name="Email" placeholder="Email" required />
                             <input type="text" name="Subject" placeholder="Subject" />
                         </div>
                         <div class="input-container">
@@ -143,7 +256,6 @@
                     <button class="btn btn-contact-us" type="submit">
                         Send Message
                     </button>
-
             </form>
         </section>
 
