--- a/HTML&CSS/Layout1/index.html
+++ b/HTML&CSS/Layout1/index.html
@@ -158,9 +158,40 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </header>
             <div class="pricing-container">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
+                <div class="pricing-container-item">
+                    <p class="pricing-header-item">Basic</p>
+                    <p class="pricing-header-item pricing-header-price-item">$0</p>
+                    <p class="pricing-header-item frequency-item">Free for Life</p>
+                    <p class="pricing-item">1 gb of space</p>
+                    <p class="pricing-item">10 gb of bandwidth</p>
+                    <p class="pricing-item"> 3 websites</p>
+                    <p class="pricing-item">Basic Customization</p>
+                    <p class="pricing-item">wordpress integration</p>
+                    <p class="pricing-item">email support</p>
+                </div>
+                <div>
+                    <p class="pricing-header-item">Professional</p>
+                    <p class="pricing-header-item pricing-header-price-item">$19</p>
+                    <p class="pricing-header-item frequency-item">Monthly Payment</p>
+                    <p class="pricing-item popular-item">OUR MOST POPULAR</p>
+                    <p class="pricing-item">5 gb of space</p>
+                    <p class="pricing-item">50 gb of bandwidth</p>
+                    <p class="pricing-item">12 websites</p>
+                    <p class="pricing-item">Advanced Customization</p>
+                    <p class="pricing-item">wordpress integration</p>
+                    <p class="pricing-item">email support</p>
+                </div>
+                <div>
+                    <p class="pricing-header-item">Enterprise</p>
+                    <p class="pricing-header-item pricing-header-price-item">$70</p>
+                    <p class="pricing-header-item frequency-item">Monthly Payment</p>
+                    <p class="pricing-item">unlimited space</p>
+                    <p class="pricing-item">unlimited bandwidth</p>
+                    <p class="pricing-item">100 websites</p>
+                    <p class="pricing-item">advanced Customization</p>
+                    <p class="pricing-item">wordpress integration</p>
+                    <p class="pricing-item">24/7 customer support</p>
+                </div>
 
             </div>
         </section>
