Add tab section + refactor animation in pricing section

--- a/HTML&CSS/Layout1/index.html
+++ b/HTML&CSS/Layout1/index.html
@@ -119,10 +119,35 @@
         </section>
 
         <section class="section-tabs">
-<!--            <header class="tabs-header">-->
-<!--                <h2></h2>-->
+            <div class="tabs-btn-container">
+                <button type="button" class="btn btn-tab active">
+                    TAB 1
+                </button>
+                <button type="button" class="btn btn-tab">
+                    TAB 2
+                </button>
+                <button type="button" class="btn btn-tab">
+                    TAB 3
+                </button>
+            </div>
+            <div class="tabs-text-block">
+                <h3 class="subtitle">Tabs with soft transitioning effect.</h3>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+                    </p>
+                 </div>
 
-<!--            </header>-->
+                <button class="btn btn-tabs-download" type="button">Download</button>
+            </div>
+            <div class="tabs-img-container">
+                <img src="./assets/images/content/city.svg" />
+            </div>
         </section>
 
         <section class="section-awesome-points">
@@ -158,39 +183,39 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </header>
             <div class="pricing-container">
-                <div class="pricing-container-item">
-                    <p class="pricing-header-item">Basic</p>
-                    <p class="pricing-header-item pricing-header-price-item">$0</p>
-                    <p class="pricing-header-item frequency-item">Free for Life</p>
-                    <p class="pricing-item">1 gb of space</p>
-                    <p class="pricing-item">10 gb of bandwidth</p>
-                    <p class="pricing-item"> 3 websites</p>
-                    <p class="pricing-item">Basic Customization</p>
-                    <p class="pricing-item">wordpress integration</p>
-                    <p class="pricing-item">email support</p>
+                <div>
+                    <div class="pricing-header-item">Basic</div>
+                    <div class="pricing-header-item price-item">$0</div>
+                    <div class="pricing-header-item frequency-item">Free for Life</div>
+                    <div class="pricing-item">1 gb of space</div>
+                    <div class="pricing-item">10 gb of bandwidth</div>
+                    <div class="pricing-item"> 3 websites</div>
+                    <div class="pricing-item">Basic Customization</div>
+                    <div class="pricing-item">wordpress integration</div>
+                    <div class="pricing-item">email support</div>
                 </div>
                 <div>
-                    <p class="pricing-header-item">Professional</p>
-                    <p class="pricing-header-item pricing-header-price-item">$19</p>
-                    <p class="pricing-header-item frequency-item">Monthly Payment</p>
-                    <p class="pricing-item popular-item">OUR MOST POPULAR</p>
-                    <p class="pricing-item">5 gb of space</p>
-                    <p class="pricing-item">50 gb of bandwidth</p>
-                    <p class="pricing-item">12 websites</p>
-                    <p class="pricing-item">Advanced Customization</p>
-                    <p class="pricing-item">wordpress integration</p>
-                    <p class="pricing-item">email support</p>
+                    <div class="pricing-header-item">Professional</div>
+                    <div class="pricing-header-item price-item">$19</div>
+                    <div class="pricing-header-item frequency-item">Monthly Payment</div>
+                    <div class="pricing-item popular-item">OUR MOST POPULAR</div>
+                    <div class="pricing-item">5 gb of space</div>
+                    <div class="pricing-item">50 gb of bandwidth</div>
+                    <div class="pricing-item">12 websites</div>
+                    <div class="pricing-item">Advanced Customization</div>
+                    <div class="pricing-item">wordpress integration</div>
+                    <div class="pricing-item">email support</div>
                 </div>
                 <div>
-                    <p class="pricing-header-item">Enterprise</p>
-                    <p class="pricing-header-item pricing-header-price-item">$70</p>
-                    <p class="pricing-header-item frequency-item">Monthly Payment</p>
-                    <p class="pricing-item">unlimited space</p>
-                    <p class="pricing-item">unlimited bandwidth</p>
-                    <p class="pricing-item">100 websites</p>
-                    <p class="pricing-item">advanced Customization</p>
-                    <p class="pricing-item">wordpress integration</p>
-                    <p class="pricing-item">24/7 customer support</p>
+                    <div class="pricing-header-item">Enterprise</div>
+                    <div class="pricing-header-item price-item">$70</div>
+                    <div class="pricing-header-item frequency-item">Monthly Payment</div>
+                    <div class="pricing-item">unlimited space</div>
+                    <div class="pricing-item">unlimited bandwidth</div>
+                    <div class="pricing-item">100 websites</div>
+                    <div class="pricing-item">advanced Customization</div>
+                    <div class="pricing-item">wordpress integration</div>
+                    <div class="pricing-item">24/7 customer support</div>
                 </div>
 
             </div>
