--- a/HTML&CSS/Layout1/index.html
+++ b/HTML&CSS/Layout1/index.html
@@ -10,14 +10,14 @@
     </head>
 
     <body>
-        <header class="nav">
+        <header class="header root-header horizontal-align">
             <div class="header-logo-wrapper">
                 <a href="#" title="Logo">
                     <img src="./assets/images/header/logo.svg" alt="Logo">
                 </a>
             </div>
-            <nav class="header-navigation">
-                <ul class="header-navigation-container">
+            <nav class="nav">
+                <ul class="nav-links list-reset">
                     <li>
                         <a href="#">Features</a>
                     </li>
@@ -36,43 +36,41 @@
                 </ul>
             </nav>
         </header>
-        <section class="section-introduction">
+        <section class="section-introduction horizontal-align">
             <div class="introduction-title-col">
+
                 <div class="introduction-img-wrapper">
                     <img src="./assets/images/content/logo.svg" alt="Logo introduction section"  />
                 </div>
+
                 <h1 class="introduction-title">
-                    MODERN AXURE TEMPLATE<br />FOR BEAUTIFUL PROTOTYPES
+                    MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
                 </h1>
+
                 <p class="introduction-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
                     euismod bibendum laoreet. Proin gravida dolor sit amet lacus
                     accumsan et viverra justo commodo.
                 </p>
+
                 <button class="btn btn-download">
                     Download
                 </button>
             </div>
             <div class="introduction-form-col">
                 <form class="form-trial" action="#">
-                    <div class="form-trial-header">
-                        <h3 class="trial-header-title">
-                            Try Your <span class="trial-header-key-word">FREE</span> Trial Today
-                        </h3>
-                    </div>
+                    <h3 class="trial-header-title">
+                        Try Your <span class="trial-header-key-word">FREE</span> Trial Today
+                    </h3>
+
                     <div class="form-trial-body">
-                        <div class="form-trial-control">
-                            <input name="Name" placeholder="Name" type="text" required />
-                        </div>
-                        <div class="form-trial-control">
-                            <input name="Email" placeholder="Email" type="email" required />
-                        </div>
-                        <div class="form-trial-control">
-                            <input name="Password" placeholder="Password" type="password" required />
-                        </div>
+                        <input class="form-trial-item" name="Name" placeholder="Name" type="text" required />
+                        <input class="form-trial-item" name="Email" placeholder="Email" type="email" required />
+                        <input class="form-trial-item" name="Password" placeholder="Password" type="password" required />
                     </div>
+
                     <div class="form-trial-btn-container">
-                        <button class="btn-get-started" type="submit">
+                        <button class="btn-get-started btn-orange" type="submit">
                             Get Started
                         </button>
                     </div>
@@ -80,37 +78,44 @@
             </div>
         </section>
 
-        <section class="section-social">
+        <section class="section-social horizontal-align">
             <div class="section-social-text-block">
                 <h3 class="subtitle social-title">Social Media</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
             </div>
-            <ul class="section-social-container">
-                <li class="section-social-item">
+
+            <ul class="social-icons list-reset">
+                <li class="social-icon">
                     <a href="#">
                         <img src="assets/images/content/social-icons/facebook.svg" alt="Facebook"/>
                     </a>
                 </li>
-                <li class="section-social-item">
+
+                <li class="social-icon">
                     <a href="#">
                         <img src="assets/images/content/social-icons/gmail.svg" alt="Gmail" />
                     </a>
                 </li>
-                <li class="section-social-item">
-                    <a href="#"><img src="assets/images/content/social-icons/twitter.svg" alt="Twitter" />
+
+                <li class="social-icon">
+                    <a href="#">
+                        <img src="assets/images/content/social-icons/twitter.svg" alt="Twitter" />
                     </a>
                 </li>
-                <li class="section-social-item">
+
+                <li class="social-icon">
                     <a href="#">
                         <img src="assets/images/content/social-icons/instagram.svg" alt="Instagram" />
                     </a>
                 </li>
-                <li class="section-social-item">
+
+                <li class="social-icon">
                     <a href="#">
                         <img src="assets/images/content/social-icons/linkedin.svg" alt="Linkedin" />
                     </a>
                 </li>
-                <li class="section-social-item">
+
+                <li class="social-icon">
                     <a href="#">
                         <img src="assets/images/content/social-icons/pinterest.svg" alt="Pinterest" />
                     </a>
@@ -118,72 +123,80 @@
             </ul>
         </section>
 
-        <section class="section-tabs">
-            <div class="tabs-btn-container">
+        <section class="section-tabs horizontal-align">
+            <div class="tabs">
                 <button type="button" class="btn btn-tab active">
                     TAB 1
                 </button>
+
                 <button type="button" class="btn btn-tab">
                     TAB 2
                 </button>
+
                 <button type="button" class="btn btn-tab">
                     TAB 3
                 </button>
             </div>
             <div class="tabs-text-block">
                 <h3 class="subtitle">Tabs with soft transitioning effect.</h3>
-                <div>
+
+                <div class="text-content">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
-                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
                     </p>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
                     </p>
                  </div>
 
-                <button class="btn btn-tabs-download" type="button">Download</button>
+                <button class="btn btn-tabs-download btn-orange" type="button">Download</button>
             </div>
+
             <div class="tabs-img-container">
-                <img src="./assets/images/content/city.svg" />
+                <img src="./assets/images/content/city.svg" alt="city" />
             </div>
         </section>
 
-        <section class="section-awesome-points">
-            <header class="awesome-header">
+        <section class="section-awesome-points horizontal-align ">
+            <header class="awesome-header header-align">
                 <h2 class="title">WHY THIS IS AWESOME</h2>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </header>
-            <div class="awesome-points-container">
-                <div class="awesome-point-item">
+
+            <div class="awesome-points between-align">
+                <div class="awesome-point">
                     <img src="./assets/images/content/point_one.svg" alt="Point one" />
                     <h3>Thoughtful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
                         Proin gravida dolor sit amet lacus accumsan et viverra.</p>
                 </div>
-                <div class="awesome-point-item">
+
+                <div class="awesome-point">
                     <img src="./assets/images/content/point_two.svg" alt="Point two" />
                     <h3>Well Crafted</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
                         Proin gravida dolor sit amet lacus accumsan et viverra.</p>
                 </div>
-                <div class="awesome-point-item">
+
+                <div class="awesome-point">
                     <img src="./assets/images/content/point_three.svg" alt="Point three" />
                     <h3>Easy to Customize</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
                         Proin gravida dolor sit amet lacus accumsan et viverra..</p>
                 </div>
+
             </div>
         </section>
 
-        <section class="section-pricing">
-            <header class="pricing-header">
+        <section class="section-pricing horizontal-align">
+            <header class="pricing-header header-align">
                 <h2 class="title">PRICING OPTIONS</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </header>
-            <div class="pricing-container">
-                <div>
+            <div class="prices between-align">
+                <div class="price">
                     <div class="pricing-header-item">Basic</div>
                     <div class="pricing-header-item price-item">$0</div>
                     <div class="pricing-header-item frequency-item">Free for Life</div>
@@ -194,7 +207,7 @@
                     <div class="pricing-item">wordpress integration</div>
                     <div class="pricing-item">email support</div>
                 </div>
-                <div>
+                <div class="price">
                     <div class="pricing-header-item">Professional</div>
                     <div class="pricing-header-item price-item">$19</div>
                     <div class="pricing-header-item frequency-item">Monthly Payment</div>
@@ -206,7 +219,7 @@
                     <div class="pricing-item">wordpress integration</div>
                     <div class="pricing-item">email support</div>
                 </div>
-                <div>
+                <div class="price">
                     <div class="pricing-header-item">Enterprise</div>
                     <div class="pricing-header-item price-item">$70</div>
                     <div class="pricing-header-item frequency-item">Monthly Payment</div>
@@ -221,54 +234,49 @@
             </div>
         </section>
 
-        <section class="section-feedbacks">
-            <header class="feedbacks-header">
+        <section class="section-feedbacks horizontal-align">
+            <header class="feedbacks-header header-align">
                 <h2 class="title">WHAT OUR CUSTOMERS ARE SAYING</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </header>
-            <div class="feedbacks-container">
-                <div class="feedback-item">
-                    <div class="feedback-block">
-                        <p class="feedback-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus
-                            expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
-                        </p>
+            <div class="feedbacks between-align">
+                <div class="feedback">
+                    <blockquote class="feedback-block">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus
+                        expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
+                    </blockquote>
 
-                    </div>
                     <div class="feedback-user">
                         <img class="user-avatar" src="./assets/images/content/avatar.svg" alt="Users avatar" />
+
                         <div class="user-data">
                             <h4>Jeremy H.</h4>
                             <p>Manager</p>
                         </div>
                     </div>
-
                 </div>
-                <div class="feedback-item">
-                    <div class="feedback-block">
-                        <p class="feedback-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus
-                            expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
-                        </p>
 
-                    </div>
+                <div class="feedback">
+                    <blockquote class="feedback-block">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus
+                        expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
+                    </blockquote>
+
                     <div class="feedback-user">
                         <img class="user-avatar" src="./assets/images/content/avatar.svg" alt="Users avatar" />
+
                         <div class="user-data">
                             <h4>Jeremy H.</h4>
                             <p>Manager</p>
                         </div>
                     </div>
-
                 </div>
-                <div class="feedback-item">
-                    <div class="feedback-block">
-                        <p class="feedback-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus
-                            expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
-                        </p>
 
-                    </div>
+                <div class="feedback">
+                    <blockquote class="feedback-block">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus
+                        expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
+                    </blockquote>
                     <div class="feedback-user">
                         <img class="user-avatar" src="./assets/images/content/avatar.svg" alt="Users avatar" />
                         <div class="user-data">
@@ -282,8 +290,8 @@
         </section>
 
 
-        <section class="section-stylish">
-            <header class="stylish-header">
+        <section class="section-stylish horizontal-align">
+            <header class="stylish-header header-align">
                 <h2 class="title stylish-title">STYLISH AXURE DESIGN</h2>
                 <p>Use the sections you need, remove the ones you don't.  Create g</p>
             </header>
@@ -292,31 +300,31 @@
             </div>
         </section>
 
-        <section class="section-contact-us ">
-            <header class="contact-us-header">
+        <section class="section-contact-us horizontal-align">
+            <header class="contact-us-header header-align">
                 <h2 class="title">contact us</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </header>
             <form action="#" method="post" class="contact-us-form">
-                    <div class="contact-us-input-container">
-                        <div class="input-container">
+                    <div class="contact-us-fields">
+                        <div class="contact-us-col">
                             <input type="text" name="Name" placeholder="Name" required />
                             <input type="email" name="Email" placeholder="Email" required />
                             <input type="text" name="Subject" placeholder="Subject" />
                         </div>
-                        <div class="input-container">
+                        <div class="contact-us-col">
                             <textarea type="text" name="Message" placeholder="Message"></textarea>
                         </div>
                     </div>
 
-                    <button class="btn btn-contact-us" type="submit">
+                    <button class="btn btn-contact-us  btn-orange" type="submit">
                         Send Message
                     </button>
             </form>
         </section>
 
-        <footer>
-            <ul class="footer-social-container">
+        <footer class="root-footer horizontal-align">
+            <ul class="footer-social-links list-reset">
                 <li>
                     <a href="#">
                         <img src="./assets/images/footer/facebook.svg" alt="Facebook"/>
