--- a/HTML&CSS/Layout1/index.html
+++ b/HTML&CSS/Layout1/index.html
@@ -36,9 +36,9 @@
                 </ul>
             </nav>
         </header>
-        <section class="section-introduction horizontal-align">
-            <div class="introduction-title-col">
 
+        <section class="section-introduction horizontal-align">
+            <div class="introduction-col">
                 <div class="introduction-img-wrapper">
                     <img src="./assets/images/content/logo.svg" alt="Logo introduction section"  />
                 </div>
@@ -57,7 +57,7 @@
                     Download
                 </button>
             </div>
-            <div class="introduction-form-col">
+            <div class="introduction-col">
                 <form class="form-trial" action="#">
                     <h3 class="trial-header-title">
                         Try Your <span class="trial-header-key-word">FREE</span> Trial Today
